--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -3,58 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Ntorq 125 - Play Smart</title>
+    <title>TVS Ntorq 125 | Play Smart</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS Ntorq 125</h2>
-        <p>India's First Bluetooth Connected Scooter</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/ntorq.jpg" alt="TVS Ntorq" onerror="this.src='https://placehold.co/800x600?text=TVS+Ntorq'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Racing DNA Unleashed</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                A scooter that performs like a bike. With 3-valve technology and stealth aircraft-inspired design, the Ntorq 125 is built for the gen-Z rider.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">SPORTY</span>
+            <h1>TVS Ntorq 125</h1>
+            <h3>Racing DNA Unleashed</h3>
+            <p>
+                India's first Bluetooth connected scooter. 
+                With Stealth Aircraft inspired design and a powerful 3-valve engine, it's built for Gen-Z.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/ntorq.jpg" alt="TVS Ntorq 125">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>9.38 PS</h4><span>Power</span></div>
+        <div class="stat-item"><h4>95 km/h</h4><span>Top Speed</span></div>
+        <div class="stat-item"><h4>Bluetooth</h4><span>Connected</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Key Highlights</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">🎮</span><h4>Gaming Console</h4><p>Speedometer with lap timer, top speed recorder, and more.</p></div>
             <div class="feature-card"><span class="feature-icon">💨</span><h4>3-Valve Engine</h4><p>Superior pickup and power with race-tuned engine.</p></div>
             <div class="feature-card"><span class="feature-icon">🔊</span><h4>Sporty Exhaust</h4><p>Signature exhaust note that sounds like a sportbike.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill Switch</h4><p>First in segment engine kill switch for convenience.</p></div>
+            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Engine Kill</h4><p>First in segment engine kill switch for convenience.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve, CVTi-REVV</div></div>
-            <div class="spec-row"><div class="spec-label">Max Power</div><div class="spec-value">9.38 PS @ 7000 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Top Speed</div><div class="spec-value">95 km/h</div></div>
-            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5.8 Liters (External Fill)</div></div>
-            <div class="spec-row"><div class="spec-label">Tyres</div><div class="spec-value">Tubeless, 12 inch Diamond Cut Alloy</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">9.38 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5.8 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">118 kg</div></div>
+            <div class="spec-box"><span class="spec-icon">🍩</span><div class="spec-label">Tyres</div><div class="spec-value">Tubeless Alloy</div></div>
+            <div class="spec-box"><span class="spec-icon">💡</span><div class="spec-label">Headlamp</div><div class="spec-value">LED</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Ntorq" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
