--- a/models/apache160.html
+++ b/models/apache160.html
@@ -3,59 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Apache RTR 160 4V</title>
+    <title>TVS Apache RTR 160 4V | Racing DNA</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>Apache RTR 160 4V</h2>
-        <p>The Unstoppable | Racing DNA</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/800x600?text=Apache+160'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Track to Road</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The most powerful 160cc bike in its class. Born from the racetrack, it features Ride Modes, GTT, and SmartXonnect technology.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: var(--tvs-red); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">RACE MACHINE</span>
+            <h1>Apache RTR 160 4V</h1>
+            <h3>The Unstoppable</h3>
+            <p>
+                The most powerful 160cc bike in its class. Born from the racetrack, 
+                it features Ride Modes, GTT, and SmartXonnect technology.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/apache160.jpg" alt="Apache 160 4V">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>159.7 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>17.55 PS</h4><span>Max Power</span></div>
+        <div class="stat-item"><h4>3 Modes</h4><span>Ride Modes</span></div>
+        <div class="stat-item"><h4>Single ABS</h4><span>Safety</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Racing Features</h2>
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🏎</span><h4>3 Ride Modes</h4><p>Sport, Urban, and Rain modes to adapt to any condition.</p></div>
-            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED Headlamp</h4><p>Aggressive styling with new LED Daytime Running Lights.</p></div>
-            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Race telemetry, lean angle mode, and crash alert.</p></div>
+            <div class="feature-card"><span class="feature-icon">🏎</span><h4>3 Ride Modes</h4><p>Sport, Urban, and Rain modes to adapt to any road condition.</p></div>
+            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED Headlamp</h4><p>Aggressive styling with new LED Daytime Running Lights (DRL).</p></div>
+            <div class="feature-card"><span class="feature-icon">📱</span><h4>SmartXonnect</h4><p>Race telemetry, lean angle mode, and crash alert system.</p></div>
             <div class="feature-card"><span class="feature-icon">🍩</span><h4>Super Moto ABS</h4><p>Single Channel Super Moto ABS for ultimate braking control.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">159.7 cc, Oil Cooled, 4 Valve</div></div>
-            <div class="spec-row"><div class="spec-label">Power (Sport)</div><div class="spec-value">17.55 PS @ 9250 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">14.73 Nm @ 7250 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">144 kg</div></div>
-            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">12 Liters</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">159.7 cc, 4V</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">17.55 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">12 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">144 kg</div></div>
+            <div class="spec-box"><span class="spec-icon">🕹</span><div class="spec-label">Gears</div><div class="spec-value">5 Speed</div></div>
+            <div class="spec-box"><span class="spec-icon">🛑</span><div class="spec-label">Brakes</div><div class="spec-value">Disc ABS</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Apache" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
