--- a/models/iqube.html
+++ b/models/iqube.html
@@ -3,58 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS iQube Electric</title>
+    <title>TVS iQube Electric | Smart. Silent.</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS iQube Electric</h2>
-        <p>Smart * Simple * Silent | The #1 Family EV</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/iqube.jpg" alt="TVS iQube" onerror="this.src='https://placehold.co/800x600?text=TVS+iQube'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">The Power of Electric</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                Switch to electric without compromise. With a real-world range of 100km+ and a top speed of 78km/h, the iQube is perfect for daily city commutes.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: #25D366; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">ELECTRIC</span>
+            <h1>TVS iQube Electric</h1>
+            <h3>The #1 Family EV</h3>
+            <p>
+                Switch to electric without compromise. 
+                With a real-world range of 100km+ and a top speed of 78km/h, the iQube is perfect for daily city commutes.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/iqube.jpg" alt="TVS iQube">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>100 km</h4><span>Real Range</span></div>
+        <div class="stat-item"><h4>4 hrs 30</h4><span>Charge Time</span></div>
+        <div class="stat-item"><h4>78 km/h</h4><span>Top Speed</span></div>
+        <div class="stat-item"><h4>₹ 30k</h4><span>Yearly Savings</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Smart Features</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">🔋</span><h4>Real Range</h4><p>100 km real-world range per charge (Eco Mode).</p></div>
             <div class="feature-card"><span class="feature-icon">📱</span><h4>TFT Touchscreen</h4><p>7-inch dashboard with HMI controller (S/ST variants).</p></div>
             <div class="feature-card"><span class="feature-icon">🔙</span><h4>Q-Park Assist</h4><p>Reverse mode for easy parking in tight spots.</p></div>
-            <div class="feature-card"><span class="feature-icon">💰</span><h4>Big Savings</h4><p>Save up to ₹30,000 per year on fuel costs.</p></div>
+            <div class="feature-card"><span class="feature-icon">🎒</span><h4>32L Storage</h4><p>Massive boot space that fits 2 helmets.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Peak Power</div><div class="spec-value">4.4 kW</div></div>
-            <div class="spec-row"><div class="spec-label">Acceleration</div><div class="spec-value">0-40 km/h in 4.2 seconds</div></div>
-            <div class="spec-row"><div class="spec-label">Charging Time</div><div class="spec-value">0-80% in 4 hours 30 mins</div></div>
-            <div class="spec-row"><div class="spec-label">Battery Warranty</div><div class="spec-value">3 Years / 50,000 km</div></div>
-            <div class="spec-row"><div class="spec-label">Boot Space</div><div class="spec-value">32 Liters (Fits 2 helmets)</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚡</span><div class="spec-label">Motor Power</div><div class="spec-value">4.4 kW</div></div>
+            <div class="spec-box"><span class="spec-icon">⏱</span><div class="spec-label">Acceleration</div><div class="spec-value">0-40 in 4.2s</div></div>
+            <div class="spec-box"><span class="spec-icon">🔌</span><div class="spec-label">Charging</div><div class="spec-value">0-80% in 4.5 hrs</div></div>
+            <div class="spec-box"><span class="spec-icon">🛡</span><div class="spec-label">Warranty</div><div class="spec-value">3 Years</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in iQube" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
