--- a/models/xl100.html
+++ b/models/xl100.html
@@ -3,58 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS XL100 Heavy Duty</title>
+    <title>TVS XL100 | Heavy Duty</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS XL100</h2>
-        <p>Heavy Duty | The Multi-Utility King</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/xl100.jpg" alt="TVS XL100" onerror="this.src='https://placehold.co/800x600?text=TVS+XL100'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Built to Last</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The most reliable business partner. With i-Touch Start and 15% more mileage, the XL100 is built for heavy loads and rough roads.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: var(--tvs-blue); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">UTILITY</span>
+            <h1>TVS XL100</h1>
+            <h3>Heavy Duty King</h3>
+            <p>
+                The most reliable business partner. With i-Touch Start and 15% more mileage, 
+                the XL100 is built for heavy loads and rough roads.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/xl100.jpg" alt="TVS XL100">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>99.7 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>130 kg</h4><span>Payload</span></div>
+        <div class="stat-item"><h4>i-Touch</h4><span>Silent Start</span></div>
+        <div class="stat-item"><h4>15% +</h4><span>Mileage</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Built Tough</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">👆</span><h4>i-Touch Start</h4><p>Silent and instant start button.</p></div>
-            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Payload capacity of 130 kg.</p></div>
+            <div class="feature-card"><span class="feature-icon">💪</span><h4>Heavy Duty</h4><p>Robust chassis with 130 kg payload capacity.</p></div>
             <div class="feature-card"><span class="feature-icon">🧼</span><h4>Easy Clean</h4><p>Detachable rear seat for carrying goods.</p></div>
             <div class="feature-card"><span class="feature-icon">🔌</span><h4>Mobile Charging</h4><p>Charge your phone while you work.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">99.7 cc, 4 Stroke</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">4.4 PS @ 6000 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">6.5 Nm @ 3500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">89 kg</div></div>
-            <div class="spec-row"><div class="spec-label">Starting</div><div class="spec-value">Kick & Self Start</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">99.7 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">4.4 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">4 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">89 kg</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in XL100" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
