--- a/models/jupiter125.html
+++ b/models/jupiter125.html
@@ -3,35 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Jupiter 125</title>
+    <title>TVS Jupiter 125 | Grand</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS Jupiter 125</h2>
-        <p>Zyada Se Bhi Zyada | 125cc Power</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/800x600?text=TVS+Jupiter+125'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Grandness in Every Ride</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                A perfect upgrade. The Jupiter 125 offers the largest under-seat storage in the segment (fits 2 full-face helmets), superior mileage, and a progressive neo-masculine styling.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: var(--tvs-blue); color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">FAMILY</span>
+            <h1>TVS Jupiter 125</h1>
+            <h3>Zyada Se Bhi Zyada</h3>
+            <p>
+                A perfect upgrade. The Jupiter 125 offers the largest under-seat storage in the segment (fits 2 helmets), 
+                superior mileage, and grand styling.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/jupiter125.jpg" alt="TVS Jupiter 125">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>124.8 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>33 L</h4><span>Storage</span></div>
+        <div class="stat-item"><h4>6.0 kW</h4><span>Power</span></div>
+        <div class="stat-item"><h4>Metal</h4><span>Body</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Grand Features</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">🪖</span><h4>2 Helmet Storage</h4><p>Largest 33L under-seat storage in the industry.</p></div>
             <div class="feature-card"><span class="feature-icon">⛽</span><h4>Front Fuel Fill</h4><p>Fuel tank moved to floorboard for better balance.</p></div>
@@ -40,21 +51,17 @@
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">6.0 kW @ 6500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">10.5 Nm @ 4500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5.1 Liters</div></div>
-            <div class="spec-row"><div class="spec-label">Suspension</div><div class="spec-value">3-Step Adjustable Gas Charged Rear</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">6.0 kW</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5.1 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">108 kg</div></div>
+            <div class="spec-box"><span class="spec-icon">🛑</span><div class="spec-label">Brakes</div><div class="spec-value">Disc Option</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Jupiter 125" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
