--- a/models/zest110.html
+++ b/models/zest110.html
@@ -3,35 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Zest 110 - Scooty</title>
+    <title>TVS Zest 110 | Scooty</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero">
-        <h2>TVS Zest 110</h2>
-        <p>Power of 110cc | Easy to Ride</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/zest.jpg" alt="TVS Zest" onerror="this.src='https://placehold.co/800x600?text=TVS+Zest+110'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Compact & Powerful</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The perfect blend of style and substance. Lightweight, easy to handle, and packed with a peppy 110cc engine for zipping through city traffic.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: #e91e63; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">SCOOTY</span>
+            <h1>TVS Zest 110</h1>
+            <h3>Compact Power</h3>
+            <p>
+                The perfect blend of style and substance. Lightweight, easy to handle, 
+                and packed with a peppy 110cc engine for zipping through city traffic.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/zest.jpg" alt="TVS Zest 110">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">Key Features</h3>
+    <div class="stats-bar">
+        <div class="stat-item"><h4>109.7 cc</h4><span>Engine</span></div>
+        <div class="stat-item"><h4>103 kg</h4><span>Lightweight</span></div>
+        <div class="stat-item"><h4>7.8 PS</h4><span>Power</span></div>
+        <div class="stat-item"><h4>19 L</h4><span>Storage</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">Fun Features</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">💡</span><h4>LED DRL</h4><p>Premium LED Daytime Running Lights for style and safety.</p></div>
             <div class="feature-card"><span class="feature-icon">🎒</span><h4>19L Storage</h4><p>Ample under-seat storage for your helmet and bags.</p></div>
@@ -40,21 +51,16 @@
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">109.7 cc, ET-Fi</div></div>
-            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">7.8 PS @ 7500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">8.8 Nm @ 5500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">103 kg</div></div>
-            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">5 Liters</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">109.7 cc</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">7.8 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">103 kg</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Zest" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
