--- a/models/ntorq150.html
+++ b/models/ntorq150.html
@@ -3,57 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Ntorq Race XP</title>
+    <title>TVS Ntorq Race XP | High Power</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body style="padding-bottom: 80px;">
+<body>
 
     <header>
         <div class="nav-container">
             <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Contact Us</a></li></ul></nav>
+            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
         </div>
     </header>
 
-    <div class="product-hero" style="background: linear-gradient(135deg, #d3161c, #900);"> <h2>TVS Ntorq Race XP</h2>
-        <p>India's Most Powerful 125cc Scooter</p>
-    </div>
-
-    <section style="text-align: center; padding-bottom: 40px;">
-        <img src="../assets/ntorq.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/800x600?text=Ntorq+Race+XP'" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
-        <div style="max-width: 800px; margin: 40px auto 0;">
-            <h3 class="section-title">Xtra Power. Xtra Pace.</h3>
-            <p style="color: #666; font-size: 1.1rem;">
-                The Race XP is the top-of-the-line Ntorq variant. It delivers segment-leading 10.2 PS power and features industry-first Voice Assist and Ride Modes.
+    <section class="model-hero">
+        <div class="hero-text">
+            <span style="background: #d3161c; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">RACE XP</span>
+            <h1>TVS Ntorq Race XP</h1>
+            <h3>Xtra Power. Xtra Pace.</h3>
+            <p>
+                The Race XP is the top-of-the-line Ntorq. 
+                It delivers segment-leading 10.2 PS power and features industry-first Voice Assist.
             </p>
+            <div style="display: flex; gap: 15px;">
+                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/ntorq.jpg" alt="TVS Ntorq Race XP">
         </div>
     </section>
 
-    <section class="features-section" style="background-color: #f9f9f9;">
-        <h3 class="section-title">XP Features</h3>
+    <div class="stats-bar" style="background: #d3161c;">
+        <div class="stat-item"><h4>10.2 PS</h4><span>Max Power</span></div>
+        <div class="stat-item"><h4>98 km/h</h4><span>Top Speed</span></div>
+        <div class="stat-item"><h4>8.6 sec</h4><span>0-60 km/h</span></div>
+        <div class="stat-item"><h4>Voice</h4><span>Assist</span></div>
+    </div>
+
+    <section>
+        <h2 class="section-title">XP Features</h2>
         <div class="features-grid">
             <div class="feature-card"><span class="feature-icon">🏎</span><h4>Ride Modes</h4><p>Switch between 'Street' and 'Race' modes instantly.</p></div>
             <div class="feature-card"><span class="feature-icon">🗣</span><h4>Voice Assist</h4><p>Control navigation and console with voice commands.</p></div>
-            <div class="feature-card"><span class="feature-icon">💪</span><h4>10.2 PS Power</h4><p>Highest power in the 125cc segment.</p></div>
+            <div class="feature-card"><span class="feature-icon">💪</span><h4>10.2 PS</h4><p>Highest power in the 125cc segment.</p></div>
             <div class="feature-card"><span class="feature-icon">🎨</span><h4>Race Graphics</h4><p>Aggressive race-inspired decals and red wheels.</p></div>
         </div>
     </section>
 
-    <section class="specs-section">
-        <h3 class="section-title">Technical Specifications</h3>
-        <div class="spec-container">
-            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, 3 Valve, Race Tuned</div></div>
-            <div class="spec-row"><div class="spec-label">Max Power</div><div class="spec-value">10.2 PS @ 7000 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Max Torque</div><div class="spec-value">10.8 Nm @ 5500 rpm</div></div>
-            <div class="spec-row"><div class="spec-label">Top Speed</div><div class="spec-value">98 km/h</div></div>
-            <div class="spec-row"><div class="spec-label">Acceleration</div><div class="spec-value">0-60 km/h in 8.6s</div></div>
+    <section style="background-color: var(--light-grey); padding-top: 60px;">
+        <h2 class="section-title">Technical Specs</h2>
+        <div class="specs-grid">
+            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">124.8 cc XP</div></div>
+            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">10.2 PS</div></div>
+            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5.8 Liters</div></div>
+            <div class="spec-box"><span class="spec-icon">⏱</span><div class="spec-label">Accel</div><div class="spec-value">0-60 in 8.6s</div></div>
         </div>
     </section>
 
-    <div class="sticky-cta">
-        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
-        <a href="https://wa.me/919964946512?text=Interested in Ntorq XP" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
-    </div>
-
+    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
 </body>
 </html>
