--- a/models/zest110.html
+++ b/models/zest110.html
@@ -3,64 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TVS Zest 110 | Scooty</title>
+    <title>TVS Zest 110 | Full Specifications</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="nav-container">
-            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-            <nav><ul class="nav-links"><li><a href="../index.html">Home</a></li><li><a href="../models.html">Inventory</a></li><li><a href="../contacts.html">Service</a></li></ul></nav>
+    <nav class="nav-container">
+        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="../models.html">Inventory</a>
+            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
         </div>
-    </header>
+    </nav>
 
     <section class="model-hero">
         <div class="hero-text">
-            <span style="background: #e91e63; color: white; padding: 5px 10px; font-size: 0.8rem; border-radius: 4px; font-weight: bold;">SCOOTY</span>
+            <span class="hero-tag">BEST IN CLASS PICKUP</span>
             <h1>TVS Zest 110</h1>
-            <h3>Compact Power</h3>
+            <h3>Live Full. Live Free.</h3>
             <p>
-                The perfect blend of style and substance. Lightweight, easy to handle, 
-                and packed with a peppy 110cc engine for zipping through city traffic.
+                The TVS Zest 110 is more than just a scooter; it's a statement of style and freedom. 
+                With a peppy 110cc ET-Fi engine, best-in-class storage, and lightweight handling, 
+                it is designed to breeze through Bangalore traffic with ease.
             </p>
-            <div style="display: flex; gap: 15px;">
-                <a href="../contacts.html" class="hero-btn">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-outline">💬 WhatsApp</a>
+            <div class="hero-btns">
+                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
+                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
             </div>
         </div>
         <div class="hero-image">
-            <img src="../assets/zest.jpg" alt="TVS Zest 110">
+            <img src="../assets/zest.jpg" alt="TVS Zest 110 Matte Series" onerror="this.src='https://placehold.co/800x600?text=Zest+Image+Missing'">
         </div>
     </section>
 
     <div class="stats-bar">
-        <div class="stat-item"><h4>109.7 cc</h4><span>Engine</span></div>
-        <div class="stat-item"><h4>103 kg</h4><span>Lightweight</span></div>
-        <div class="stat-item"><h4>7.8 PS</h4><span>Power</span></div>
-        <div class="stat-item"><h4>19 L</h4><span>Storage</span></div>
+        <div class="stat-box">
+            <h4>110 cc</h4>
+            <p>ET-Fi Engine</p>
+        </div>
+        <div class="stat-box">
+            <h4>103 kg</h4>
+            <p>Lightweight</p>
+        </div>
+        <div class="stat-box">
+            <h4>7.8 PS</h4>
+            <p>Max Power</p>
+        </div>
+        <div class="stat-box">
+            <h4>19 L</h4>
+            <p>Storage Space</p>
+        </div>
     </div>
 
-    <section>
-        <h2 class="section-title">Fun Features</h2>
+    <section class="info-section">
+        <div class="section-head">
+            <h2>Why Choose Zest 110?</h2>
+            <p>Packed with features that make your daily ride comfortable and fun.</p>
+        </div>
+
         <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">💡</span><h4>LED DRL</h4><p>Premium LED Daytime Running Lights for style and safety.</p></div>
-            <div class="feature-card"><span class="feature-icon">🎒</span><h4>19L Storage</h4><p>Ample under-seat storage for your helmet and bags.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charger</h4><p>Front glove box with smartphone charging.</p></div>
-            <div class="feature-card"><span class="feature-icon">⚖️</span><h4>Lightweight</h4><p>Best-in-class power-to-weight ratio for easy handling.</p></div>
+            <div class="feature-card">
+                <span class="feature-icon">🚀</span>
+                <h4>Best-in-Class Pickup</h4>
+                <p>Zip from 0-60 km/h faster than any other scooter in its category, thanks to the high-torque ET-Fi engine.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">💡</span>
+                <h4>LED DRL & Tail Lamp</h4>
+                <p>Premium LED Daytime Running Lights and a signature LED tail lamp ensure you are visible and stylish.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🔌</span>
+                <h4>USB Smartphone Charger</h4>
+                <p>Never run out of battery. The front glove box comes with a dedicated charging port for your phone.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🛡</span>
+                <h4>Parking Brake</h4>
+                <p>A unique rear wheel parking brake keeps your scooter safe and stable even on sloped roads.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🍩</span>
+                <h4>Tubeless Tyres</h4>
+                <p>Ride without worry. High-grip tubeless tyres prevent sudden deflation in case of punctures.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🛋</span>
+                <h4>Wider Seat</h4>
+                <p>A textured, wider seat with dual-tone beige interiors gives a premium feel and superior comfort.</p>
+            </div>
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey); padding-top: 60px;">
-        <h2 class="section-title">Technical Specs</h2>
-        <div class="specs-grid">
-            <div class="spec-box"><span class="spec-icon">⚙️</span><div class="spec-label">Engine</div><div class="spec-value">109.7 cc</div></div>
-            <div class="spec-box"><span class="spec-icon">🐎</span><div class="spec-label">Power</div><div class="spec-value">7.8 PS</div></div>
-            <div class="spec-box"><span class="spec-icon">🛢</span><div class="spec-label">Fuel Tank</div><div class="spec-value">5 Liters</div></div>
-            <div class="spec-box"><span class="spec-icon">⚖️</span><div class="spec-label">Weight</div><div class="spec-value">103 kg</div></div>
+    <section class="info-section" style="background-color: #f9f9f9;">
+        <div class="section-head">
+            <h2>Technical Specifications</h2>
+        </div>
+
+        <div class="specs-container">
+            <div class="spec-row">
+                <div class="spec-key">Engine Type</div>
+                <div class="spec-val">Single Cylinder, 4 Stroke, Air Cooled Spark Ignition</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Displacement</div>
+                <div class="spec-val">109.7 cc</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Max Power</div>
+                <div class="spec-val">5.75 kW (7.8 PS) @ 7500 rpm</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Max Torque</div>
+                <div class="spec-val">8.8 Nm @ 5500 rpm</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Transmission</div>
+                <div class="spec-val">CVT (Continuous Variomatic Transmission)</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Kerb Weight</div>
+                <div class="spec-val">103 kg</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Fuel Tank Capacity</div>
+                <div class="spec-val">5 Liters</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Under-seat Storage</div>
+                <div class="spec-val">19 Liters</div>
+            </div>
+            <div class="spec-row">
+                <div class="spec-key">Brakes</div>
+                <div class="spec-val">110mm Drum (Front) / 130mm Drum (Rear) with SBT</div>
+            </div>
         </div>
     </section>
 
-    <footer><div class="footer-bottom"><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></div></footer>
+    <footer>
+        <p>&copy; 2024 Tirumala TVS Bidarahalli. Authorized Main Dealer.</p>
+    </footer>
+
 </body>
 </html>
